--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/style.css">
 
-    <script src="shape.js" type="text/javascript" defer></script>
+    <script src="shape.js" type="text/javascript"></script>
+    <script src="game.js" type="text/javascript"></script>
     <script src="/paper-full.min.js" type="text/javascript" defer></script>
     <script src="/script.js" type="text/javascript" canvas="myCanvas" defer></script>
   </head>
